{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 7,
  "lineage": "49007403-c5c5-e351-442a-30d57a358292",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:456646283126:loadbalancer/terraform-asg-example",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-asg-example-1468674950.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-asg-example",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-04fd98dab4ba34088"
            ],
            "source_security_group": "456646283126/terraform-example-elb",
            "source_security_group_id": "sg-04fd98dab4ba34088",
            "subnets": [
              "subnet-313c094b",
              "subnet-3156cb7d",
              "subnet-d39f60b8"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:456646283126:security-group/sg-04fd98dab4ba34088",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fd98dab4ba34088",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": null,
            "owner_id": "456646283126",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-9574a0fe"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:456646283126:security-group/sg-07d8a1d3d524b0943",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07d8a1d3d524b0943",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "456646283126",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-9574a0fe"
          }
        }
      ]
    }
  ]
}